# diesel-sample

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  start.sh
migrations/2019-09-04-110239_sample-schema/: up.sql
src/: main.rs  schema.rs
